force-app/main/default/objects/zak_ErrorLog__c/zak_ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Persistent storage for zakErrorLog events. Captured by zakErrorLog trigger filtered by setting in zakSettings.</description>
    <label>zakErrorLog</label>
    <nameField>
        <label>Error</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zakErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>