force-app/main/default/objects/zak_ErrorLog__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Content of the Error field from the event.</description>
    <label>ErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>