force-app/main/default/objects/zak_ErrorLog__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Event Timestamp calculated from TimeMillis field.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>